kubernetes/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: bff-atcl
  namespace: test
  labels: 
    app: bff-atcl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: bff-atcl
  template: 
    metadata: 
      labels: 
        app: bff-atcl
    spec:
      containers: 
      - name: mwportal-bff
        image: 847322629192.dkr.ecr.ap-northeast-2.amazonaws.com/bff-atcl:1.0
        imagePullPolicy: Always        
        ports: 
        - containerPort: 8080 
          name: http 
          protocol: TCP
        volumeMounts:
        - name: timezone-config
          mountPath: /etc/localtime
      volumes:
      - name: timezone-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
      #nodeSelector:
      #  node-role.kubernetes.io/worker: "true"
