kubernetes/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: mwportal-bff
  namespace: mwportal
spec: 
  selector: 
    app: mwportal-bff
  type: ClusterIP 
  ports: 
    - name: http 
      port: 8080 
      protocol: TCP
      targetPort: 8080
